@@ -1,6 +1,7 @@
 Version 2.9.8dev:
 
 * Updated bezel.
+* New option: frame_time (can be used to limit emulation time before vsync).
 * Compatibility updates for a couple of shaders [guest.r].
 * Imported updated translations from crowdin.com.
 
